--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="row">
                   <div class="col s12">
                     <h4>
-                      Money Recieved
+                      Recieved
                       <a class="btn-floating waves-effect waves-light green"
                         ><i
                           data-category="income"
@@ -107,7 +107,7 @@
                 <div class="row">
                   <div class="col s12">
                     <h4>
-                      Money Spent
+                      Spent
                       <a class="btn-floating waves-effect waves-light red"
                         ><i
                           data-category="expense"
