--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+      <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     </head>
   <body>
     
@@ -80,7 +81,7 @@
                 <div class="row">
                   <div class="col s12">
                     <h4>
-                      Recieved
+                      Recieved           
                       <a class="btn-floating waves-effect waves-light green"
                         ><i
                           data-category="income"
