--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h4>
                       Recieved           
                       <a class="btn-floating waves-effect waves-light green "
-                        >+
+                        ><center><h4>-</h4></center>
                       </a>
                     </h4>
                   </div>
@@ -105,7 +105,7 @@
                     <h4>
                       Spent
                       <a class="btn-floating waves-effect waves-light red"
-                        >+
+                        ><center><h4>-</h4></center>
                       </a>
                     </h4>
                   </div>
