--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <h4>
                       Spent
                       <a class="btn-floating waves-effect waves-light red"
-                        ><center style="vertical-align: center"><h4>-</h4></center>
+                        ><center style="margin-bottom: 20px"><h4>-</h4></center>
                       </a>
                     </h4>
                   </div>
