--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
                       Recieved           
                       <a class="btn-floating waves-effect waves-light green "
                         >      
+                        <i
+                          data-category="expense"
+                          id="addExpenseBtn"
+                          class="material-icons small"
+                          >add</i
+                        >
                       </a>
                     </h4>
                   </div>
@@ -105,6 +111,11 @@
                     <h4>
                       Spent
                       <a class="btn-floating waves-effect waves-light red"
+                        ><i
+                          data-category="expense"
+                          id="addExpenseBtn"
+                          class="material-icons small"
+                          >remove</i
                         >
                       </a>
                     </h4>
