--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                       Spent
                       <a class="btn-floating waves-effect waves-light red"
                         ><i
+                          style="font-size: 10px"
                           data-category="expense"
                           id="addExpenseBtn"
                           class="material-icons small"
