--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                       <a class="btn-floating waves-effect waves-light green "
                         >      
                         <i
-                          style="font-size: 10px"
+                          style="font-size: 10px; padding-bottom: 10px"
                           data-category="expense"
                           id="addExpenseBtn"
                           class="material-icons small"
