--- a/index.html
+++ b/index.html
@@ -84,13 +84,14 @@
                       Recieved           
                       <a class="btn-floating waves-effect waves-light green "
                         >      
-                        <i
-                          style="font-size: 10px; padding-bottom: 50px"
+                        <center><i
+<!--                           style="font-size: 70px;" -->
                           data-category="expense"
                           id="addExpenseBtn"
                           class="material-icons small"
                           >add</i
-                        >
+                        ></center>
+            
                       </a>
                     </h4>
                   </div>
