--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                   <div class="col s12">
                     <h4>
                       Recieved           
-                      <a class="btn-floating waves-effect waves-light green "
+                      <a class="btn-floating waves-effect waves-light green " style="display: flex;justify-content: center;align-items: center;"
                         >      
                         <center><i
-                          style="font-size: 30px;"
+                          style="font-size: 10px; padding: 20px;"
                           data-category="expense"
                           id="addExpenseBtn"
                           class="material-icons small"
