--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                       <a class="btn-floating waves-effect waves-light green " style="display: flex;justify-content: center;align-items: center;"
                         >      
                         <center><i
-                          style="font-size: 10px; padding: 20px;"
+                          style="font-size: 20px; padding: 20px;"
                           data-category="expense"
                           id="addExpenseBtn"
                           class="material-icons small"
@@ -112,14 +112,16 @@
                   <div class="col s12">
                     <h4>
                       Spent
-                      <a class="btn-floating waves-effect waves-light red"
-                        ><i
-                          style="font-size: 10px"
+                      <a class="btn-floating waves-effect waves-light green " style="display: flex;justify-content: center;align-items: center;"
+                        >      
+                        <center><i
+                          style="font-size: 20px; padding: 20px;"
                           data-category="expense"
                           id="addExpenseBtn"
                           class="material-icons small"
                           >remove</i
-                        >
+                        ></center>
+            
                       </a>
                     </h4>
                   </div>
