--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                       <a class="btn-floating waves-effect waves-light green " style="display: flex;justify-content: center;align-items: center;"
                         >      
                         <center><i
-                          style="font-size: 20px;"
+                          style="font-size: 20px; padding: 20px"
                           data-category="expense"
                           id="addExpenseBtn"
                           class="material-icons small"
@@ -115,7 +115,7 @@
                       <a class="btn-floating waves-effect waves-light red" style="display: flex;justify-content: center;align-items: center;"
                         >      
                         <center><i
-                          style="font-size: 20px;"
+                          style="font-size: 20px; padding: 20px"
                           data-category="expense"
                           id="addExpenseBtn"
                           class="material-icons small"
