--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
             <div class="card">
               <div class="card-content">
                 <!-- Header and Add Button -->
-                <div class="row">
+                <div class="row" >
                   <div class="col s12">
                     <h4>
                       Recieved           
-                      <a class="btn-floating waves-effect waves-light green " style="display: flex;justify-content: center;align-items: center;"
+                      <a class="btn-floating waves-effect waves-light green " style="display: flex;justify-content: center;flex-direction: row;align-items: center;"
                         >      
                         <center><i
                           style="font-size: 20px; padding: 20px"
