--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                         >      
                         <center><i
                           style="font-size: 20px; padding: 20px"
-                          data-category="expense"
-                          id="addExpenseBtn"
+                          data-category="income"
+                          id="addIncomeBtn"
                           class="material-icons small"
                           >add</i
                         ></center>
