--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </div>
     </header>
     <main>
+      <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
       <div class="container">
         <div class="row">
           <!-- Dashboard -->
