--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <!-- Import FontAwesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <!--Import style.css - Materialize - Compiled and Minified CSS-->
      <link type="text/css" rel="stylesheet" href="css/style.css"  media="screen,projection"/>      
      <link rel="preconnect" href="https://fonts.googleapis.com">
