--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </header>
     <main>
-      <center><canvas id="myChart" style="width:100%;max-width:600px"></canvas></center>
+<!--       <center><canvas id="myChart" style="width:100%;max-width:600px"></canvas></center> -->
       <div class="container">
         <div class="row">
           <!-- Dashboard -->
